# starter

./: .gitignore  .gitmodules  README.md  config.json  pyproject.toml  run_autoformat.sh  run_ci_checks.sh
.github/workflows/: ci.yml
experiments/: run_experiment.py
experiments/conf/: config.yaml
experiments/conf/agent/: ppo_l_navigate.yaml  td3_l_navigate.yaml
scripts/: run_ppo_l_navigate.sh  run_td3_l_navigate.sh
src/starter/: utils.py
src/starter/envs/: __init__.py  l_navigate.py
src/starter/policy/: __init__.py
src/starter/policy/oracles/: __init__.py
src/starter/policy/oracles/L_navigate/: __init__.py  oracle.py
src/starter/policy/rl/: __init__.py  agent.py  gym_utils.py  ppo_agent.py  td3_agent.py
tests/: conftest.py  test_utils.py
tests/envs/: test_L_navigate.py
tests/policy/: test_overfit.py  test_ppo.py  test_td3.py
tests/submodule/: test_kinder.py
