[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "starter"
version = "0.1.0"
description = "A basic starter for Python packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "tensorboard>=2.10.0",
   "wandb>=0.13.11",
   "gym==0.23.1",
   "gymnasium==0.29.1",
   "torch==2.4.1",
   "moviepy>=1.0.3",
   "pygame>=2.1",
   "huggingface-hub>=0.11.1",
   "rich<12.0",
   "tenacity>=8.2.2",
   "tyro>=0.5.10",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]
atari = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "shimmy>=1.1.0",
]
envpool = ["envpool>=0.6.4,<0.7", "opencv-python>=4.6.0.66,<5"]
procgen = ["procgen>=0.10.7,<0.11"]
mujoco = [
    "mujoco<=2.3.3",
    "imageio>=2.14.1,<3",
]
dm_control = [
    "shimmy>=1.1.0",
    "mujoco<=2.3.3",
    "dm-control>=1.0.10",
    "h5py>=3.7.0",
]
pettingzoo = [
    "PettingZoo==1.18.1",
    "SuperSuit==3.4.0",
    "multi-agent-ale-py==0.1.11",
]
jax = [
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
    "optax==0.1.4",
    "chex==0.1.5",
    "scipy<1.13.0",
]
optuna = [
    "optuna>=3.0.1,<4",
    "optuna-dashboard>=0.7.2,<0.8",
    "typing_extensions>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starter = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "third-party/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "torch.*",
    "gym.*",
    "gymnasium.*",
    "tensorboard.*",
    "wandb.*",
    "moviepy.*",
    "pygame.*",
    "huggingface_hub.*",
    "rich.*",
    "tyro.*",
]
ignore_missing_imports = true
